Campo de nombre de usuario
Se agrego un nuevo input al formulario y se creo un nuevo atributo en la
clase persona

--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Users\\MaxPower\\.m2\\repository\\org\\springframework\\spring-context\\4.2.6.RELEASE\\spring-context-4.2.6.RELEASE.jar","type":"JAR","hints":{}},"ABSENT"],[{"location":"C:\\Users\\MaxPower\\Java\\proyectos\\TallerWebJava\\proyecto-base-spring","type":"PROJECT","hints":{"PROJECT_NAME":"proyecto-base-spring"}},"proyecto-base-spring:proyecto-base-spring:0.0.1"]]
