--- a/bebamos/src/main/webapp/WEB-INF/classes/jdbc.properties
+++ b/bebamos/src/main/webapp/WEB-INF/classes/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/bebamos
+jdbc.url=jdbc:mysql://localhost:3306/bebamos
 jdbc.username=root
 jdbc.password=
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
